[package]
name = "colossal"
description = "Colossal Cave Adventure"
version = "1.0.0"
authors = ["crawlingChaos"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/crawlingChaos/colossal"
repository = "https://github.com/crawlingChaos/colossal"
readme = "README.md"

[dependencies]
